@@ -36,6 +36,9 @@ Trunk (unreleased changes)
 
   BUG FIXES
 
+    HIVE-146. Fix builds for non-default build directory.
+    (David Phillips through zshao)
+
     HIVE-47. CLI to support multiline queries from an input file.
     (Ashish through zshao)
 
